# natools

./: CMakeLists.txt  Makefile.am  README  README.md  configure.ac  deepcleen  style.sh
bnatools/: Makefile.am  aparser.c  roots.c  secroot.c
cnash/: README  bignum.h  bits.h  calculus.h  cnash.h  equation_solver.h  function.h  interpolation.h  lexer.h  list.h  parser.h  root_search.h  scanner.h  xstring.h
libbaas/: CMakeLists.txt  Makefile.am  README  bignum.c  bits.c  bits.h  bstree.c  bstree.h  graph.c  graph.h  hashtbl.c  heap-list.c  heap.c  list.c  list.h  memory.c  mix.c  mod-arithmetic.c  sort-aux.c  sort-cmp.h  sort.c  vector.c  xstring.c  xstring.h
libbaas/baas/: bignum.h  bits.h  bstree.h  common.h  graph.h  hashtbl.h  heap-list.h  heap.h  list.h  mix.h  mod-arithmetic.h  sort.h  vector.h  xstring.h
libbaas/test/: Makefile.am  benchmark_append.c  test_bignum.c  test_bits.c  test_bstree.c  test_hash.c  test_heap.c  test_list.c  test_modarithmetic.c  test_sort.c  test_sort.sh  test_vector.c
libcnash/: Makefile.am  calculus.c  calculus.h  cnash.c  cnash.h  combinatorics.c  combinatorics.h  equation_solver.c  function.c  function.h  interpolation.c  interpolation.h  root_search.c  root_search.h
libcnash/cnash/: calculus.h  combinatorics.h  function.h  interpolation.h
libna/: CMakeLists.txt  Makefile.am  calculus.c  combinatorics.c  function.c  interpolation.c  natools.c  nonlinear_equations.c  root_finding.c
libna/na/: calculus.h  combinatorics.h  function.h  interpolation.h  natools.h  root_finding.h
libna/test/: Makefile.am  test_calculus.c  test_combinatronics.c
libnatools/: Makefile.am  calculus.c  combinatorics.c  equation_solver.c  function.c  interpolation.c  natools.c
libnatools/natools/: calculus.h  equation_solver.h  function.h  interpolation.h  natools.h
libparser/: CMakeLists.txt  Makefile.am  functions-1.c  functions.c  lexer-ids.c  lexer-operators.c  lexer.c  lexer.h  operator-precedence.c  parser-1.c  parser-math.c  parser-priv.h  parser-semantics.c  parser.c  parser.h  scanner.c  scanner.h  semanter-1.c  semanter-2.c  semanter.c
libparser/parser/: lexer.h  parser.h  scanner.h
libparser/test/: Makefile.am  test_lexer.c  test_parser.c  test_parser2.c  test_scanner.c
tools/: CMakeLists.txt  Makefile.am  README  aparser.c  roots.c
