
bin_PROGRAMS = \
	test_list \
	test_heap
#	test_sort \
#	test_bignum \
#	test_bits \
#	test_modarithmetic

LDADD = ../libbaas.la
CFLAGS = -O0 -ggdb

test_list_SOURCES = test_list.c
test_heap_SOURCES = test_heap.c

#test_sort_SOURCES = test_sort.c ../sort.c ../sort-aux.c
#test_bignum_SOURCES = test_bignum.c ../bignum.c
#test_bits_SOURCES = test_bits.c ../bits.c
#test_modarithmetic_SOURCES = test_modarithmetic.c ../mod-arithmetic.c
